# mcu-hub

./: .gitignore  CMakeLists.txt  CONFIG_GUIDE.md  Kbuild  Kconfig  Makefile  Makefile.kbuild  README.md  compile_commands.json  gcc-arm-none-eabi.cmake
app/: CMakeLists.txt  Kbuild  Makefile  main.h
boards/: Kconfig  Makefile
boards/Fire_F429_Supreme/: Makefile  sdram.c
boards/fire-f429-zhizun/: Makefile  main.c  modules.c  modules.h  sdram.c
configs/: Fire_F429_Supreme_defconfig  stm32f429_defconfig
drivers/: CMakeLists.txt  Kbuild  Kconfig  Makefile
drivers/common/: def.h  device.c  device.h
drivers/common/font/: fonts.c  fonts.h
drivers/gpio/: gpio.h  gpio_stm32f429.c  gpio_stm32f429.h
drivers/lcd/: lcd.h  ltdc_stm32f429.c
drivers/led/: led.c  led.h
drivers/uart/: uart.h  uart_stm32f429.c
platform/: CMakeLists.txt  Kbuild  Kconfig  Makefile  platform.c  platform.h
platform/stm32f429/: Makefile  STM32F429XX_FLASH.ld  mcu.c  mcu.h  stm32f4xx_hal_conf.h  stm32f4xx_hal_msp.c  stm32f4xx_it.c
scripts/: Kbuild.include  kconfig.mk
scripts/kconfig/: Makefile  lkc.h
